--- a/Dockerfile.httpcontrol
+++ b/Dockerfile.httpcontrol
@@ -1,7 +1,7 @@
 FROM golang:1.24-alpine3.21 AS build
 WORKDIR /build
 COPY . .
-RUN go build -o ./broker cmd/app/tofuh.go
+RUN go build -o ./broker cmd/httpcontrol/main.go
 
 FROM alpine:3.21
 WORKDIR /app
